--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -53,7 +53,7 @@ jobs:
             cat "$report" | gunzip | jq "{\"$time\": {\"address\": .requestedUrl, \"seconds\": (.audits.interactive.numericValue / 1000) | floor}}"
           done | jq -s add > /tmp/artifacts/data.json
           
-          stat data.json || echo "[]" > data.json
+          stat data.json || echo "{}" > data.json
           jq -s '.[0] + .[1]' data.json /tmp/artifacts/data.json > /tmp/artifacts/mix.json
           mv /tmp/artifacts/mix.json data.json
           
