--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -32,8 +32,14 @@ jobs:
 
       - name: Process the report results
         run: |
+          echo "::set-output name=accessibility::$(jq -r .scores.accessibility < /tmp/artifacts/results.json)"
+          echo "::set-output name=bestPractices::$(jq -r .scores.bestPractices < /tmp/artifacts/results.json)"
+          echo "::set-output name=performance::$(jq -r .scores.performance < /tmp/artifacts/results.json)"
+          echo "::set-output name=progressiveWebApp$(jq -r .scores.progressiveWebApp < /tmp/artifacts/results.json)"
+          echo "::set-output name=seo::$(jq -r .scores.seo < /tmp/artifacts/results.json)"
           jq -s '.[0] + .[1]' reports.json /tmp/artifacts/results.json > /tmp/artifacts/mix.json
           mv /tmp/artifacts/mix.json reports.json
+          
           for report in /tmp/artifacts/*.html; do
             base="$(basename "$report")"; name="${base%.html}"; time="${name/lighthouse-report-}"
             perl -ne '/<script>window.__LIGHTHOUSE_JSON__ = (.*);<\/script>/ and print $1' "$report" |
