--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -33,17 +33,17 @@ jobs:
       - name: Process the report results
         id: results
         run: |
-          echo "::set-output name=accessibility::$(jq -r .[0].scores.accessibility < /tmp/artifacts/results.json)\n"
-          echo "::set-output name=bestPractices::$(jq -r .[0].scores.bestPractices < /tmp/artifacts/results.json)\n"
-          echo "::set-output name=performance::$(jq -r .[0].scores.performance < /tmp/artifacts/results.json)\n"
-          echo "::set-output name=progressiveWebApp$(jq -r .[0].scores.progressiveWebApp < /tmp/artifacts/results.json)\n"
-          echo "::set-output name=seo::$(jq -r .[0].scores.seo < /tmp/artifacts/results.json)\n"
+          echo "::set-output name=accessibility::$(jq -r .[0].scores.accessibility < /tmp/artifacts/results.json)"
+          echo "::set-output name=bestPractices::$(jq -r .[0].scores.bestPractices < /tmp/artifacts/results.json)"
+          echo "::set-output name=performance::$(jq -r .[0].scores.performance < /tmp/artifacts/results.json)"
+          echo "::set-output name=progressiveWebApp$(jq -r .[0].scores.progressiveWebApp < /tmp/artifacts/results.json)"
+          echo "::set-output name=seo::$(jq -r .[0].scores.seo < /tmp/artifacts/results.json)"
           jq -s '.[0] + .[1]' reports.json /tmp/artifacts/results.json > /tmp/artifacts/mix.json
           mv /tmp/artifacts/mix.json reports.json
           
           base="$(basename "$(jq -r .[0].localReport < /tmp/artifacts/results.json)")"
           time="$(grep -o '[0-9]' <<< "${base%.json.gz}" | tr -d '\n')"
-          echo "::set-output name=time::$time\n"
+          echo "::set-output name=time::$time"
 
           for report in /tmp/artifacts/*.html; do
             base="$(basename "$report")"; name="${base%.html}"; time="${name/lighthouse-report-}"
@@ -99,7 +99,7 @@ jobs:
             Accessibility: ${{ steps.results.outputs.accessibility }}%
             Best practices: ${{ steps.results.outputs.bestPractices }}%
             Performance: ${{ steps.results.outputs.performance }}%
-            Progressive: web application ${{ steps.results.outputs.progressiveWebApp }}%
+            Progressive web application: ${{ steps.results.outputs.progressiveWebApp }}%
             Search engine optimization: ${{ steps.results.outputs.seo }}%
             :book: <https://helpfulengineering.github.io/lighthouse/report.html?time=${{ steps.results.outputs.time }}|*Read the full report*>
           SLACK_FOOTER: |
