--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -1,5 +1,3 @@
-name: Lighthouse report
-
 on:
   schedule:
     - cron: "* * * * 1"
@@ -10,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@main
+        uses: actions/checkout@v2
 
       - name: Checkout the reports branch
         run: |
