--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -2,35 +2,23 @@ on:
   schedule:
     - cron: "* * * * 1"
   workflow_dispatch:
-
 jobs:
   lighthouse-check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-
-      - name: Checkout the reports branch
-        run: |
-          git fetch --all
-          git checkout origin/reports
-
-      - name: Create temporary directories
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: reports          
+      - uses: foo-software/lighthouse-check-action@v4.0.0
+        with:
+          urls: https://helpfulengineering.org
+          emulatedFormFactor: desktop
+          outputDirectory: .
+      - id: results
         run: |
           test -f ./reports.json || touch ./reports.json
           mkdir -p /tmp/artifacts ./reports
-          
-      - name: Generate the report
-        uses: foo-software/lighthouse-check-action@master
-        with:
-          author: ${{ github.actor }}
-          outputDirectory: /tmp/artifacts
-          urls: https://helpfulengineering.org
-          emulatedFormFactor: desktop
-
-      - name: Process the report results
-        id: results
-        run: |
           echo "::set-output name=accessibility::$(jq -r .[0].scores.accessibility < /tmp/artifacts/results.json)"
           echo "::set-output name=bestPractices::$(jq -r .[0].scores.bestPractices < /tmp/artifacts/results.json)"
           echo "::set-output name=performance::$(jq -r .[0].scores.performance < /tmp/artifacts/results.json)"
@@ -61,34 +49,25 @@ jobs:
 
           cp /tmp/artifacts/*.json.gz reports
           
-      - name: Commit the report results
-        uses: EndBug/add-and-commit@v4
+      - uses: EndBug/add-and-commit@v7
         with:
-          add: "*.json reports"
-          ref: reports
           message: Add reports
-          author_name: "GitHub Actions"
-          author_email: "actions@github.com"
+          add: "data.json reports.json reports"
         env:
           GITHUB_TOKEN: ${{ github.token }}
-          
-      - name: Build the GitHub Pages directory structure
-        run: |
-          rm -rf * || true
-          git checkout origin/reports -- "./reports" "./reports.json" "./data.json"
-          git checkout origin/main -- "./pages/*"
-          mv ./pages/* . && rmdir ./pages
-          
-      - name: Publish the report results to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - run: |
+          mkdir ./public
+          git checkout origin/reports -- ./reports ./reports.json ./data.json
+          git checkout origin/main -- './pages/*'
+          mv ./reports ./reports.json ./data.json ./public
+          mv ./pages/* ./public
+      - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ github.token }}
           force_orphan: true
           publish_branch: pages
-          publish_dir: .
-
-      - name: Send the reports to Slack
-        uses: rtCamp/action-slack-notify@v2.1.0
+          publish_dir: public
+      - uses: rtCamp/action-slack-notify@v2.1.0
         env:
           SLACK_CHANNEL: devops
           SLACK_USERNAME: Lighthouse
@@ -97,8 +76,8 @@ jobs:
             Accessibility: ${{ steps.results.outputs.accessibility }}%
             Best practices: ${{ steps.results.outputs.bestPractices }}%
             Performance: ${{ steps.results.outputs.performance }}%
-            Progressive web application: ${{ steps.results.outputs.progressiveWebApp }}%
-            Search engine optimization: ${{ steps.results.outputs.seo }}%
+            Progressive Web App: ${{ steps.results.outputs.progressiveWebApp }}%
+            SEO: ${{ steps.results.outputs.seo }}%
             :book: <https://helpfulengineering.github.io/lighthouse/report.html?time=${{ steps.results.outputs.time }}|*Read the full report*>
           SLACK_FOOTER: |
             <https://github.com/helpfulengineering/lighthouse/blob/master/.github/workflows/report.yml|Click here to modify this bot.>
