--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -3,7 +3,7 @@ on:
     - cron: "* * * * 1"
   workflow_dispatch:
 jobs:
-  lighthouse-check:
+  report:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
